# haskell-sandbox

./: .gitignore
GoServ/: GoServ.lkshs  stack.yaml
GoServ/src/: Main.hs
GoServ/src/GoServ/: Persistence.hs  Templates.hs
GoServ_test/: GoServ_test.cabal
_GoServ/: GoServ.cabal  LICENSE
_simpleserver/src/Web/: SimpleServer.hs
_simpleserver/src/Web/SimpleServer/: HTTPRequest.hs
imagetest/: LICENSE  imagetest.cabal  stack.yaml
imagetest/src/: Main.hs
simpleserver/src/Web/SimpleServer/: HTTPResponse.hs
src/: Logger.hs  divvy.hs  insertsort.hs  mergesort.hs  simple_server.hs
