name:                imagetest
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/colinarobinson/imagetest#readme
license:             BSD3
license-file:        LICENSE
author:              Colin-Alexa
maintainer:          colinarobinson@gmail.com
copyright:           C A Robinson, 2017
category:            ad-hoc
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable imagetest
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base               >= 4.7 && < 5,
                       friday             == 0.2.3.1,
                       friday-juicypixels == 0.1.2,
                       JuicyPixels
